# chessmate

./: .claude  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.client  MULTIPLAYER_TESTING.md  README.md  SERVER.md  TODO  docker-compose.yml
.cargo/: config.toml
godot/: chess_board.gd  chess_board.gd.uid  chess_board.tscn  chessmate.gdextension  chessmate.gdextension.uid  debug_utils.gd  debug_utils.gd.uid  network_manager.gd  project.godot
migrations/: .gitkeep  20260111000001_create_users_table.sql  20260111000002_create_matches_table.sql  20260111000003_create_players_table.sql  20260111000004_create_match_winners_table.sql  20260111000005_create_user_owned_cards_table.sql
src/: cards.rs  ffi.rs  game.rs  godot_bridge.rs  lib.rs
src/ai/: evaluation.rs  mod.rs  search.rs  simple_opponent.rs
src/cards/: deck.rs  drafting.rs  effects.rs  mod.rs
src/game/: board.rs  chess_clock.rs  game_state.rs  mod.rs  moves.rs  piece.rs  rules.rs
src/networking/: client.rs  matchmaking.rs  mod.rs  protocol.rs  server.rs  types.rs  websocket.rs
tests/: LOAD_TESTING.md  MANUAL_TESTING.md  load_test.yml  network_integration_tests.rs
