[package]
name = "chessmate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["godot"]
godot = ["dep:godot"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", optional = true }
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime and networking
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Web frameworks
warp = "0.3"  # Used in websocket.rs module
axum = { version = "0.7", features = ["ws"] }  # Used in server binary
tower-http = { version = "0.5", features = ["cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "migrate"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation for game IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
